syntax = "proto3";

option csharp_namespace = "Files.Grpc";

service DownloadService {
    rpc DownloadDocument(DocumentDownloadRequest) returns (DocumentDownloadResult);
}

message DocumentDownloadRequest {
    string file_id = 1;
}

message DocumentDownloadResult {
    string file_id = 1;
    bytes data = 2;
}